add update adress

--- a/.env.development
+++ b/.env.development
@@ -6,7 +6,8 @@ GOOGLE_ID=487669586961-jjr03605qeb1bmlro39e2htd8jg2sqm5.apps.googleusercontent.c
 GOOGLE_SECRET=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
 
 NEXTAUTH_SECRET=fc69e8fbf445a2f9184fcfe8bb08d97f
-NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL_INTERNAL=http://127.0.0.1:3000
 
 prod_user_db_pass=1rP4iYwA1edbnABzMv3IKQ
 prod_username_db=jacksonaguiar
